--- a/index.html
+++ b/index.html
@@ -13,7 +13,26 @@
             <div class="calculator-head">
                 <div class="container-screen"></div>
             </div>
-            <div class="calculator-body">BODY</div>
+            <div class="calculator-body">
+                <div class="container-keyboard">
+                    <div class="cont-btn">1</div>
+                    <div class="cont-btn">2</div>
+                    <div class="cont-btn">3</div>
+                    <div class="cont-btn">4</div>
+                    <div class="cont-btn">5</div>
+                    <div class="cont-btn">6</div>
+                    <div class="cont-btn">7</div>
+                    <div class="cont-btn">8</div>
+                    <div class="cont-btn">9</div>
+                    <div class="cont-btn">+</div>
+                    <div class="cont-btn">-</div>
+                    <div class="cont-btn">*</div>
+                    <div class="cont-btn">/</div>
+                    <div class="cont-btn">=</div>
+                    <div class="cont-btn">0</div>
+                    <div class="cont-btn">effacer</div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
